[tool.poetry]
name = "adserver"
version = "1.18.0"
description = "Model Explanation Server"
authors = ["Seldon Technologies Ltd. <hello@seldon.io>"]
license = "Business Source License 1.1"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
alibi-detect = {version = "^0.11.4", extras = ["all"]}
seldon-core = {path = "_seldon_core", develop = false}
numpy = "*"
cloudevents = "1.2.0"
tensorflow = "^2.12.0"
scikit-learn = "0.24.2"

elasticsearch = "7.9.1"

sh = "^1.14.2"
tornado = "^6.1"
protobuf = "^3.20.3"

google-cloud-core = "1.4.1"
google-cloud-storage = "1.31.2"
transformers = "^4.0"
dill = "0.3.2"
joblib = "1.2.0"

# CVE-2022-29217
PyJWT = "2.6.0"
# catalogue@2.1.0 has been yanked
catalogue = "2.0.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-tornasync = "^0.6.0"
mypy = "^0.910"
grpcio-tools = "1.31.0"
mypy-protobuf = "1.22"
pip-licenses = "^3.5.2"
black = "21.7b0"
isort = "5.9.0"
types-requests = "2.26.0"
gsutil = "5.5"
requests-mock = "^1.9.3"
tenacity = "^8.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
