[tool.poetry]
name = "adserver"
version = "1.19.0-rc.1"
description = "Model Explanation Server"
authors = ["Seldon Technologies Ltd. <hello@seldon.io>"]
license = "Business Source License 1.1"

[tool.poetry.dependencies]
python = ">=3.12.0,<3.13"
alibi-detect = {version = "0.13.0", extras = ["all"]}
seldon-core = {path = "_seldon_core", develop = false}
numpy = "1.26.4"
cloudevents = "1.2.0"
tensorflow = "2.18.1"
scikit-learn = "1.7.2"

elasticsearch = "7.9.1"

sh = "^1.14.2"
tornado = "^6.5.3"
protobuf = "^5.29.1"

google-cloud-core = "1.4.1"
google-cloud-storage = "1.31.2"
transformers = "^4.0"
dill = "0.3.2"
joblib = "1.2.0"

# CVE-2022-29217
PyJWT = "2.6.0"
# catalogue@2.1.0 has been yanked
catalogue = "2.0.8"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.4"
pytest-tornasync = "^0.6.0"
mypy = "1.18.2"
grpcio-tools = "1.70.0"
mypy-protobuf = "3.5.0"
pip-licenses = "5.5.0"
black = "25.9.0"
isort = "5.9.0"
types-requests = "2.26.0"
gsutil = "5.5"
requests-mock = "^1.9.3"
tenacity = "^8.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
