[tool.poetry]
name = "alibiexplainer"
version = "1.19.0-dev"
description = "Model Explanation Server"
authors = ["Seldon Technologies Ltd. <hello@seldon.io>"]
license = "Business Source License 1.1"

[tool.poetry.dependencies]
python = ">=3.12.0,<3.13"
alibi = {version = "^0.9.6", extras = ["shap"]}
numpy = "1.26.4"
tensorflow = "2.17.1"
scikit-learn = "1.7.2"
xgboost = "1.7.6"
lightgbm = "^4.6.0"
thinc="8.2.5"
safetensors="0.6.2"
pywavelets="1.9.0"
transformers = "^4.53.0"
catboost = "^1.2.8"
tf-keras = "2.17.0"

tornado = "6.5.2"
protobuf = "4.25.8"
joblib = "1.2.0"
requests = "^2.32.5"
urllib3 = "^2.5.0"
jinja2 = "^3.1.6"
werkzeug = "^3.1.3"
pillow = "^10.4.0"
certifi = "^2024.7.4"
fonttools = "^4.43.0"
idna = "^3.7"
pydantic = "^1.10.13"
tqdm = "^4.66.3"

[tool.poetry.group.dev.dependencies]
pytest = "8.4.2"
pytest-tornasync = "^0.6.0"
mypy = "1.18.2"
grpcio-tools = "1.62.3"
mypy-protobuf = "3.5.0"
pip-licenses = "5.5.0"
black = "25.9.0"
isort = "7.0.0"
types-requests = "2.26.0"
gcsfs = "2025.9.0"
requests-mock = "1.9.3"
pip-audit = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
