[tool.poetry]
name = "alibiexplainer"
version = "1.18.0"
description = "Model Explanation Server"
authors = ["Seldon Technologies Ltd. <hello@seldon.io>"]
license = "Business Source License 1.1"

[tool.poetry.dependencies]
python = ">=3.12.0,<3.13"
alibi = {version = "^0.9.6", extras = ["shap"]}
numpy = "1.26.4"
tensorflow = "2.17.1"
scikit-learn = "1.7.2"
xgboost = "1.7.6"
lightgbm = "^4.6.0"
thinc="8.2.5"
safetensors="0.6.2"
pywavelets="1.9.0"
transformers = "^4.53.0"
catboost = "^1.2.8"
tf-keras = "2.17.0"

catboost = "^1.0"
tornado = "^6.1"
protobuf = "^3.17.3"
joblib = "1.2.0"

werkzeug = "^2.1.1"
pillow = "^9.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-tornasync = "^0.6.0"
mypy = "^0.910"
grpcio-tools = "1.31.0"
mypy-protobuf = "1.22"
pip-licenses = "^3.5.2"
black = "22.12.0"
isort = "5.9.0"
types-requests = "2.26.0"
gsutil = "5.5"
requests-mock = "1.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
